fix: More contrast time in events

--- a/src/components/Timeline/Event/styles.styl
+++ b/src/components/Timeline/Event/styles.styl
@@ -26,7 +26,8 @@
     font-weight 500
     color var(--background)
     margin-right 8px
-    opacity .4
+    opacity .6
+    font-size .8em
 
   .name
     color var(--background)
@@ -34,8 +35,9 @@
 
   .duration
     color var(--background)
-    opacity .4
+    opacity .5
     font-weight 300
+    font-size .8em
 
 .allDayEvent
   background white
